...
                }
                withAnimation {
                    //show nextView .whateverViewYouWantToShow defined in ContentView Enum
                    showNextView = viewNext
                }
            }) {
                Text("Send Code")
                    .fontWeight(.bold)
                    .foregroundColor(.white)
                    .frame(width: 340, height: 20, alignment: .center)
                    .padding()
                    .background(Color.black)
                    .cornerRadius(10)
...
