...
                                    // Use the custom TextFieldWithEyeIcon view for securely entering the student's password
                                    TextFieldWithEyeIcon(placeholder: "Password", text: $studentPasswordText, isSecure: true, visibility: $studentPassVisibility)
                                }
                            }
                        }
                        
                        // "Forgot password?" button aligned to the right
                        HStack {
                            Button(action: {
                                /* sets the last page that the user was at before entering the password reset process to
                                   the login page so that if the user presses the back button it brings the user
                                   back to the login page. */
                                viewSwitcher.lastView = "login"
...
