...
                    sendEmail(code: code, email: email)
                } else {
                    alertMessage = "Invalid email format"
                    showAlert = true
                }
            }) {
                Text("Generate and Send Code")
                    .fontWeight(.bold)
                    .foregroundColor(.white)
                    .frame(width: 275, height: 20, alignment: .center)
                    .padding()
                    .background(Color.black)
                    .cornerRadius(10)
...
