...
                    }
                    
                })
                {
                    VStack
                    {
                        Text("Teacher")
                            .fontWeight(.bold)
                            .foregroundColor(.white)
                            .frame(width: 150, height: 20, alignment: .center)
                        Image(systemName: "graduationcap")
                            .fontWeight(.bold)
                            .imageScale(.large)
...
                        showStudentRegistrationFields.toggle()
                        showTeacherRegistrationFields = false
                        updateButtonColors()                    }
                })
                {
                    VStack{
                        Text("Student")
                            .fontWeight(.bold)
                            .foregroundColor(.white)
                            .frame(width: 150, height: 16, alignment: .center)
                        Image(systemName: "studentdesk")
                            .padding(4)
                            .fontWeight(.bold)
...
            
            if showTeacherRegistrationFields
            {
                VStack
                {
                    TextField(
                        "First Name",
                        text: $teacherFirstName
                    )
                    .padding()
                    .background(Color.gray.opacity(0.2))
                    .cornerRadius(10)
                    .frame(width: 370)
                    .disableAutocorrection(true)
                    .autocapitalization(.none)
                    
                    TextField(
                        "Last Name",
                        text: $teacherLastName
                    )
                    .padding()
                    .background(Color.gray.opacity(0.2))
                    .cornerRadius(10)
                    .frame(width: 370)
                    .disableAutocorrection(true)
                    .autocapitalization(.none)
                    
                    TextField(
                        "Email",
                        text: $teacherEmail
                    )
                    .padding()
                    .background(Color.gray.opacity(0.2))
                    .cornerRadius(10)
                    .frame(width: 370)
                    .disableAutocorrection(true)
                    .autocapitalization(.none)
                    
                    if passwordStatus == "visible"
                    {
                        TextFieldWithEyeIcon(placeholder: "Password", text: $teacherPassword, isSecure: false, visibility: $passwordStatus)
                    }
                    else
                    {
                        TextFieldWithEyeIcon(placeholder: "Password", text: $teacherPassword, isSecure: true, visibility: $passwordStatus)
                    }
                    
                    if(confirmStatus=="visible")
                    {
                        TextFieldWithEyeIcon(placeholder: "Confirm Password", text: $teacherPassConfirm, isSecure: false, visibility: $confirmStatus)
                    }
                    else
                    {
                        TextFieldWithEyeIcon(placeholder: "Confirm Password", text: $teacherPassConfirm, isSecure: true, visibility: $confirmStatus)
                    }
                    Button(action:
...
                            {
                                showNextView = .login
                            }
                        }
                    })
                    {
                        Text("Register")
                            .padding()
                            .frame(width: 370)
                            .fontWeight(.bold)
                            .background(Color.black)
                            .foregroundColor(.white)
                            .cornerRadius(10)
...
