...
                Spacer()
                
                // create Requests button
                NavigationLink(destination: TeacherAllRequestsView(studentList: studentList)
                    .navigationBarHidden(true)
                    .environmentObject(studentList)) {
                    Text("Requests")
                        .padding(.leading, 25)
                        .fontWeight(btnStyle.getFont())
                        .foregroundColor(btnStyle.getBtnFontColor())
                        .frame(width: btnStyle.getWidth(),
                               height: btnStyle.getHeight(),
                               alignment: btnStyle.getAlignment())
...
